# OpenSubWay

./: README.md
OpenSubWay/: README.md  TODO.md  main.py  requirements.txt
OpenSubWay-main/OpenSubWay-main/OpenSubWay/: README.md  TODO.md  main.py  pyproject.toml
OpenSubWay-main/OpenSubWay-main/OpenSubWay/opensubway/: __init__.py  app.py  config.py  input.py
OpenSubWay-main/OpenSubWay-main/OpenSubWay/opensubway/audio/: sound.py  synth.py
OpenSubWay-main/OpenSubWay-main/OpenSubWay/opensubway/render/: camera.py  city.py  hud.py  mesh.py  panel.py  people.py  worldmesh.py
OpenSubWay-main/OpenSubWay-main/OpenSubWay/opensubway/sim/: objectives.py  passengers.py  simulation.py  station.py  train.py  world.py
OpenSubWay-main/OpenSubWay-main/OpenSubWay/opensubway/vk/: commands.py  context.py  pipeline.py  renderer.py  swapchain.py
OpenSubWay-main/OpenSubWay-main/OpenSubWay/opensubway/vk/shaders/: scene.frag  scene.frag.spv  sky.frag  sky.frag.spv  sky.vert.spv  text.frag  text.vert
OpenSubWay-main/OpenSubWay-main/OpenSubWay/tests/: _driver.py  test_airport_line.py  test_panel.py  test_track_mesh.py  test_train.py  test_world.py
OpenSubWay/opensubway/: app.py  config.py  input.py  settings.py
OpenSubWay/opensubway/render/: camera.py  city.py  hud.py  mesh.py  panel.py  worldmesh.py
OpenSubWay/opensubway/sim/: objectives.py  passengers.py  simulation.py  station.py  train.py  world.py
OpenSubWay/opensubway/vk/: commands.py  memory.py  (+3 more)
OpenSubWay/tests/: _driver.py  test_objectives.py  test_settings.py  test_train.py
OpenSubWay/tools/: compile_shaders.py
(+9 files in other folders)
