[project]
name = "opensubway"
version = "0.1.0"
description = "A 3D subway simulator rendered with Vulkan (Python 3.12)"
requires-python = ">=3.12"
dependencies = [
    "vulkan==1.3.275.1",
    "glfw==2.10.0",
    "numpy>=2.0",
    "Pillow>=10.0",
    "pyglm>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["opensubway*"]
